--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,13 +1,17 @@
 {
   "name": "front-end",
   "version": "1.0.0",
+  "type": "module",
   "description": "The Accounting front-end will be a React application designed for Farsi-first usage (RTL) while supporting English. It follows the system design docs and integrates with the Accounting backend under `accounting/back-end`.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite --port 5176",
     "build": "tsc && vite build",
-    "preview": "vite preview --port 5176"
+    "preview": "vite preview --port 5176",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "format": "prettier --write \"src/**/*.{ts,tsx,css}\""
   },
   "keywords": [],
   "author": "",
@@ -29,9 +33,16 @@
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@typescript-eslint/eslint-plugin": "^8.46.3",
+    "@typescript-eslint/parser": "^8.46.3",
     "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.21",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4.1.16",
     "typescript": "^5.9.3",
     "vite": "^7.1.12"
