--- a/front-end/.env.local
+++ b/front-end/.env.local
@@ -1,5 +1,5 @@
 # Backend API Base URL (port aligned to accounting backend)
-VITE_API_BASE_URL=http://localhost:4100/api
+VITE_API_BASE_URL=http://localhost:4100
 
 # Default language (Farsi-first)
 VITE_DEFAULT_LANG=fa
