--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,8 +17,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/material": "^7.3.5",
     "@tanstack/react-query": "^5.90.6",
     "axios": "^1.13.1",
+    "date-object": "^2.1.6",
     "framer-motion": "^12.23.24",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
@@ -26,7 +31,11 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.2.3",
-    "react-router-dom": "^7.9.5"
+    "react-multi-date-picker": "^4.5.2",
+    "react-router-dom": "^7.9.5",
+    "react-toastify": "^11.0.5",
+    "stylis": "^4.3.6",
+    "stylis-plugin-rtl": "^2.1.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
