--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ node_modules
 back-end/.env.example
 back-end/.env.local.example
 front-end/.env.example
+back-end/tmp/acc_dump.sql
+back-end/.env.production
+back-end/src/scripts/copyPostgres.ts
