--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,6 +14,7 @@
     "seed": "ts-node src/scripts/seed.ts",
     "migrate": "ts-node src/scripts/migrate.ts",
     "migrate:pg": "DB_DRIVER=postgres ts-node src/scripts/migrate.ts",
+    "copy-db": "ts-node src/scripts/copyPostgres.ts",
     "test:watch": "vitest"
   },
   "keywords": [],
