--- a/front-end/package.json
+++ b/front-end/package.json
@@ -28,12 +28,14 @@
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.552.0",
+    "moment-jalaali": "^0.10.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.2.3",
     "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^7.9.5",
     "react-toastify": "^11.0.5",
+    "react-window": "^2.2.3",
     "stylis": "^4.3.6",
     "stylis-plugin-rtl": "^2.1.1"
   },
