add Production to Accounting

--- a/back-end/.env.local
+++ b/back-end/.env.local
@@ -6,7 +6,13 @@ CASHBOX_START_CODE=6000
 # When unset, server defaults to 6100.
 BANK_DETAIL_START_CODE=6100
 
-# Local Postgres connection for development
-DATABASE_URL=postgres://hsn:1qaz@localhost:5432/accounting?sslmode=disable
+# Accounting runs as a schema inside the Greenbunch database
+ACCOUNTING_SCHEMA=accounting
+
+# Local Postgres connection for development (points to greenbunch DB)
+DATABASE_URL=postgres://postgres:1qaz@localhost:5432/greenbunch?sslmode=disable
 PGSSLMODE=disable
 DISABLE_REFRESH_PERSISTENCE=true
+
+# Align JWT secret with main server so admin tokens work in accounting
+JWT_SECRET=your-super-secret-jwt-key-for-development
