--- a/front-end/.env.local
+++ b/front-end/.env.local
@@ -8,12 +8,6 @@ VITE_DEFAULT_LANG=fa
 # Auto-login or show debug helpers in dev-only flows (optional)
 VITE_DEV_AUTO_LOGIN=true
 
-# Default special codes for forms
-VITE_DEFAULT_PAYMENT_SPECIAL_CODE=211001
-VITE_DEFAULT_RECEIPT_SPECIAL_CODE=111201
-
-VITE_CASHBOX_START_CODE=6000
-
-# Bank account Details starting code
-VITE_BANK_DETAIL_START_CODE=6100
+# Settings now manage defaults; these env vars are removed.
+# See Treasury Settings page for configuration.
 
